# doc_copilot

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  litellm.config.yaml  pyproject.toml
agents/: README.md
agents/billing_optimizer_agent/: agent.json
agents/clinical_intake_agent/: agent.json
agents/note_safety_reviewer/: agent.json
agents/patient_communicator_agent/: agent.json
agents/review_queue_orchestrator/: agent.json
agents/scribe_agent/: agent.json
docker/: ollama-init.sh
frontend/: pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/: Podfile
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/ios/tools/: codesign
frontend/lib/: main.dart
frontend/lib/src/: api.dart  app.dart  dashboard.dart  models.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/test/: widget_test.dart
scripts/: offline_readiness.py  smoke_orchestrator.py
src/clinic_copilot/: __init__.py  agent_runtime.py  config.py  demo_data.py  llm.py  logging_safety.py  main.py  mock_openai_server.py  offline_readiness.py  orchestrator.py  prompts.py  regulatory_vault.py  schemas.py  service.py  storage.py
src/clinic_copilot_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
