[project]
name = "clinic-copilot-mvp"
version = "0.1.0"
description = "Backend MVP for safe clinical documentation assistance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43.0.0",
    "fastapi>=0.116.0",
    "haystack-ai>=2.0,<3.0",
    "litellm>=1.67.5",
    "openai>=1.68.2",
    "openai-whisper>=20240930",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.48.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
